fixed content alignment in tables
removed text alignment from tables
forced text alignment on helper classes text-left, text-center and
text-right

--- a/MasterLayout/resources/sass/components/webiny_table.scss
+++ b/MasterLayout/resources/sass/components/webiny_table.scss
@@ -79,7 +79,6 @@ table.table {
       padding: 10px 15px;
       font-size: 14px;
       color: #666666;
-      text-align: left;
       border-right: 1px solid #CCC;
       vertical-align: middle;
     }
